// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductGridPrice /> should render with msrp 1`] = `
<Component
  product={
    Object {
      "price": Object {
        "currency": "EUR",
        "discount": 52,
        "info": "",
        "msrp": 0,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 22.95,
      },
    }
  }
>
  <ProductGridPrice
    product={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 52,
          "info": "",
          "msrp": 0,
          "unitPrice": 10.95,
          "unitPriceMin": 10.95,
          "unitPriceStriked": 22.95,
        },
      }
    }
  >
    <Grid
      className="css-1glzrmu engage__product__product-grid-price"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={true}
          unitPrice={10.95}
          unitPriceMin={10.95}
        />
      </Grid.Item>
      <Grid.Item>
        <PriceStriked
          className="css-nil"
          currency="EUR"
          value={22.95}
        />
      </Grid.Item>
    </Grid>
    <PriceInfo
      className="css-117ocmm"
      product={
        Object {
          "price": Object {
            "currency": "EUR",
            "discount": 52,
            "info": "",
            "msrp": 0,
            "unitPrice": 10.95,
            "unitPriceMin": 10.95,
            "unitPriceStriked": 22.95,
          },
        }
      }
      wrapper={[Function]}
    />
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render with strike price 1`] = `
<Component
  product={
    Object {
      "price": Object {
        "currency": "EUR",
        "discount": 52,
        "info": "",
        "msrp": 0,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 22.95,
      },
    }
  }
>
  <ProductGridPrice
    product={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 52,
          "info": "",
          "msrp": 0,
          "unitPrice": 10.95,
          "unitPriceMin": 10.95,
          "unitPriceStriked": 22.95,
        },
      }
    }
  >
    <Grid
      className="css-1glzrmu engage__product__product-grid-price"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={true}
          unitPrice={10.95}
          unitPriceMin={10.95}
        />
      </Grid.Item>
      <Grid.Item>
        <PriceStriked
          className="css-nil"
          currency="EUR"
          value={22.95}
        />
      </Grid.Item>
    </Grid>
    <PriceInfo
      className="css-117ocmm"
      product={
        Object {
          "price": Object {
            "currency": "EUR",
            "discount": 52,
            "info": "",
            "msrp": 0,
            "unitPrice": 10.95,
            "unitPriceMin": 10.95,
            "unitPriceStriked": 22.95,
          },
        }
      }
      wrapper={[Function]}
    />
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render without discounts 1`] = `
<Component
  product={
    Object {
      "price": Object {
        "currency": "EUR",
        "discount": 0,
        "info": "PriceInfoString",
        "msrp": 0,
        "unitPrice": 22.95,
        "unitPriceMin": 22.95,
        "unitPriceStriked": 0,
      },
    }
  }
>
  <ProductGridPrice
    product={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "PriceInfoString",
          "msrp": 0,
          "unitPrice": 22.95,
          "unitPriceMin": 22.95,
          "unitPriceStriked": 0,
        },
      }
    }
  >
    <Grid
      className="css-1glzrmu engage__product__product-grid-price"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={false}
          unitPrice={22.95}
          unitPriceMin={22.95}
        />
      </Grid.Item>
    </Grid>
    <PriceInfo
      className="css-117ocmm"
      product={
        Object {
          "price": Object {
            "currency": "EUR",
            "discount": 0,
            "info": "PriceInfoString",
            "msrp": 0,
            "unitPrice": 22.95,
            "unitPriceMin": 22.95,
            "unitPriceStriked": 0,
          },
        }
      }
      wrapper={[Function]}
    />
  </ProductGridPrice>
</Component>
`;
